Criação de template de Testes de Interface
- Correção estrutural dos módulos e das dependências para acomodar os testes
- Teste de acesso à home da aplicação